src/test/deca/codegen/valid/instanceOf.deca
class Animal {
}

class Lion extends Animal {
}

{
    Lion lion = new Lion();
    float x;
    lion.nourrir(7.2);
    lion.faireCrier();
}
