src/test/deca/codegen/invalid/absenceReturn2.deca
class A {
    float function() {
    }
}

{
    A a = new A();
    float x = a.function();
}
//ERROR Error : function without return.